# cur_stim

./: Cargo.toml  build.rs  devbox.json  flake.nix  memory.x  readme.md  tmp.txt
.cargo/: config.toml
.config/fish/: config.fish
src/: main.rs  main.rs.bak  main_bode.rs  utils.rs
