[package]
name = "u5_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "i2c"
# path = "src/bin/i2c.rs"


# [net]
# git-fetch-with-cli = true

[dependencies]
# cortex-m = "0.7.0"
cortex-m = { version = "0.7.7" }
#u5-lib = { git = "ssh://gitea@git.ggeta.com:2002/guangzong/u5_new.git", features = [
#    "stm32u5a5qj",
#], default-features = false, branch = "dev" }
u5-lib = { path="../u5_new", features = [
    "stm32u5a5qj",
], default-features = false }
eb_cmds = { git = "ssh://gitea@git.ggeta.com:2002/guangzong/eb_cmds.git" }
#critical-section = "1.1.2"

defmt = "0.3.6"
defmt-rtt = { version = "0.4.0" }
#defmt-itm = { version = "0.3.0" }
futures = { version = "0.3.17", default-features = false, fetures = [
    "async-await",
] }
cortex-m-rt = { version = "0.7.3" }


[dependencies.embassy-usb]
git = "https://github.com/embassy-rs/embassy"
rev = "35f284e"

[dependencies.embassy-executor]
features = ["nightly", "arch-cortex-m", "executor-thread"]
git = "https://github.com/embassy-rs/embassy"
rev = "35f284e"

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy"
rev = "35f284e"


# disable all optimizations
[profile.dev]
opt-level = 1
debug = true
