[package]
name = "u5_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "i2c"
# path = "src/bin/i2c.rs"

[dependencies]
cortex-m = { version = "0.7.7" }
u5-lib = {git = "ssh://gitea@git.ggeta.com:2002/guangzong/u5_new.git", features = ["utils"], rev= "2f8448f9bf"}
defmt = "0.3.6"
defmt-rtt = { version = "0.4.0" }
cortex-m-rt = { version = "0.7.3", default-features = false }

[dependencies.embassy-executor]
features = ["nightly", "arch-cortex-m", "executor-thread"]
git = "https://github.com/embassy-rs/embassy"
rev = "35f284e"

# disable all optimizations
[profile.dev]
opt-level = 1
debug = true

[features]
stm32u575zi = ["u5-lib/stm32u575zi"]
stm32u5a5zj = ["u5-lib/stm32u5a5zj"]
stm32u575ci = ["u5-lib/stm32u575ci"]
#default = ["stm32u5a5zj"]
